@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        class com.example.coursemkv.model.Admin {
            ~ admin_id : int
            ~ firstname : String
            ~ lastname : String
            + Admin()
            + Admin()
            + getAdmin_id()
            + getFirstname()
            + getLastname()
            + setAdmin_id()
            + setFirstname()
            + setLastname()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        interface com.example.coursemkv.model.DAO {
            {abstract} + Connection()
            {abstract} + createAdmin()
            {abstract} + createMessage()
            {abstract} + createUser()
            {abstract} + deleteMessage()
            {abstract} + getMessages()
            {abstract} + loginAdmin()
            {abstract} + loginUser()
            {abstract} + update()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        class com.example.coursemkv.model.JDBCPostgreSQL {
            {static} ~ DB_URL : String
            {static} ~ PASS : String
            {static} ~ USER : String
            ~ connection : Connection
            {static} - instance : JDBCPostgreSQL
            + Connection()
            + createAdmin()
            + createMessage()
            + createUser()
            + deleteMessage()
            + getAdmin()
            + getConnection()
            {static} + getInstance()
            + getMessages()
            + getUser()
            + loginAdmin()
            + loginUser()
            + setMessages()
            + update()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        class com.example.coursemkv.model.Messages {
            + admin_click : boolean
            + description : String
            + id_users : int
            + mes_id : int
            + status : String
            + user_click : boolean
            + Messages()
            + getDescription()
            + getId_users()
            + getMes_id()
            + getStatus()
            + isAdmin_click()
            + isUser_click()
            + setAdmin_click()
            + setDescription()
            + setId_users()
            + setMes_id()
            + setStatus()
            + setUser_click()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        class com.example.coursemkv.model.User {
            ~ firstname : String
            ~ id_users : int
            ~ lastname : String
            + User()
            + User()
            + getFirstname()
            + getId_users()
            + getLastname()
            + setFirstname()
            + setId_users()
            + setLastname()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.coursemkv {
      namespace model {
        abstract class com.example.coursemkv.model.myHuman {
            ~ firstname : String
            ~ id : int
            ~ lastname : String
            + getFirstname()
            + getId()
            + getLastname()
            + myHuman()
            + myHuman()
            + setFirstname()
            + setId()
            + setLastname()
        }
      }
    }
  }
  

  com.example.coursemkv.model.Admin -up-|> com.example.coursemkv.model.myHuman
  com.example.coursemkv.model.JDBCPostgreSQL .up.|> com.example.coursemkv.model.DAO
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.Admin : admin
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.JDBCPostgreSQL : db
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.Messages : messages
  com.example.coursemkv.model.JDBCPostgreSQL o-- com.example.coursemkv.model.User : user
  com.example.coursemkv.model.User -up-|> com.example.coursemkv.model.myHuman


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
